[gd_scene load_steps=3 format=2]

[ext_resource path="res://DangerZones/DangerZones.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.76251, 2.65795, 3.49007 )

[node name="DangerZones" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_DangerZones_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DangerZones_body_exited"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
